tests/profile/fail/simple_send_usage_fail.rb

class A
  def f(x) x end
end

a = A.new
z = a.send(:f, 3)
if false
  z.foo
end
